[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
ecdsa = "0.16.6"
hex = "0.4.3"
libsecp256k1 = "0.7.1"
rand = "0.8.5"
ring = "0.16.20"
serde = "1.0.163"
tiny-keccak = { version = "2.0", features = ["sha3"] }
